# smdd_rimlab

./: CMakeLists.txt  README.md
app/: README.md  fim_ise_rtc_3d_results_interpreter.cpp  fvm3d_results_interpreter.cpp  run_fim_2d.cpp  run_fim_3d.cpp  run_fvm.cpp  run_fvm_cuda_full.cu  run_hessian_ise_rtc.cpp  run_hessian_ise_rtc_3d.cpp  run_vomp.cpp  run_vomp_cuda.cu  run_von_mises_mixture.cpp  vomp3d_results_interpreter.cpp
cfg/: README.md  gmm_estim.cfg  run_fvm_cuda_full.cfg  test_fvm.cfg
include/: README.md  bin_utils.h  csv_utils.h  drpm_degeneracy.h  dsd_utils.cuh  dsd_utils.h  fim2d.h  fim3d.h  find_peak.h  find_peaks_matrix.h  gme_GaussianMixtureEstimator.h  gme_MortonOctree.h  gme_MortonSort.h  gme_gaussian_metric.h  orientation.h  orientation_eigen.h  orientation_rimlab.h
matlab/: README.md  crt_computation.m  interval_pow2.m  pnebi.m  pnebi0.m  pnebi1.m  rt_corr_fourier_coeffs.m  rt_corr_max.m  rt_correlation.m  rt_gmm_eval.m  startup.m  test_correlation_translation.m  test_crt.m  test_rt_corr_max_manopt.m  test_rt_correlation.m  test_rt_gmm_eval.m
src/: README.md  dsd_utils.cpp  dsd_utils_3d.cpp  gme_GaussianMixtureEstimator.cpp  gme_MortonSort.cpp  gme_gaussian_metric.cpp
test/: README.md  create_degenerate_scan.cpp  estimate_pair_hessian_ise_rtc.cpp  test_drpm_example.cpp  test_drpm_geode.cpp  test_fisher_matrix.cpp  test_fisher_matrix_gsl_eigen.cpp  test_fvm.cpp  test_fvm_cuda.cu  test_fvm_cuda_full.cu  test_gaussian_estimator_3d.cpp  test_gme.cpp  test_ise_registration.cpp  test_vomp.cpp  test_vomp_cuda.cu  test_von_mises_mixture.cpp
